Fix sidebar scrollbar

--- a/css/ui.css
+++ b/css/ui.css
@@ -256,7 +256,7 @@ body {
   left: 0;
   bottom: 0;
   width: 200px;
-  height: 480px;
+  height: 510px;
   overflow: auto;
   padding: 3px;
   padding-top: 0;
